# claude-rule-enforcer

./: .env.example  .gitignore  CHANGELOG.md  CRE.md  LICENSE  PLAN.md  README.md  ROADMAP.md  cre-amp-gate  pyproject.toml  rules.example.json
hooks/: gate-hook.sh  hooks.json
paper/: CRE_Technical_Paper.md
src/cre/: __init__.py  advice_tracker.py  chat_logger.py  cli.py  config.py  dashboard.py  db.py  gate.py  hook.sh  importer.py  knowledge.py  learner.py  mcp_server.py  session.py  tamper_watch.py  watchdog.py
src/cre/adapters/: __init__.py  amp.py  claude_code.py  delegate.py  generic.py
tests/: test_1000_scenarios.py  test_adapters.py  test_cli.py  test_cre_md.py  test_gate.py  test_importer.py  test_knowledge.py  test_l2_integration.py  test_learner.py  test_mcp_1000.py  test_promotion.py
