[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-rule-enforcer"
version = "0.4.0"
description = "A PA for your AI — behavioural enforcement for Claude Code"
readme = "README.md"
license = "LicenseRef-BSL-1.1"
requires-python = ">=3.9"
authors = [{name = "CRE Contributors"}]
keywords = ["claude", "ai", "policy", "enforcement", "hooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
]

[project.scripts]
cre = "cre.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
